--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,11 @@
 body {
-  padding: 0; }
+  padding: 0;
+  background-image: url(../img/background.jpg); }
+
+p {
+  color: white;
+  font-size: 1rem; }
+
+h3 {
+  color: white;
+  font-size: 1.5rem; }
