--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,12 @@
 body {
   padding: 0;
+  background-image: url(../img/background.jpg);
+}
+p {
+  color: white;
+  font-size: 1rem;
+}
+h3 {
+  color: white;
+  font-size: 1.5rem;
 }
