--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,57 @@
 body {
   padding: 0;
-  background-image: url(../img/background.jpg); }
+  color: white;
+  background-color: black; }
 
 p {
-  color: white;
   font-size: 1rem; }
 
 h3 {
   color: white;
   font-size: 1.5rem; }
+
+header a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 35px; }
+  header a h1 {
+    display: block; }
+  header a div {
+    width: 250px;
+    height: 150px;
+    display: flex;
+    border-radius: 50%;
+    overflow: hidden;
+    justify-content: center; }
+    header a div img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%; }
+
+#preview {
+  background-image: url(../img/background.jpg);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+  #preview div {
+    width: 50%; }
+    #preview div:first-child {
+      display: flex;
+      justify-content: center; }
+    #preview div img {
+      justify-self: center;
+      align-self: center;
+      padding: 0 auto; }
+  #preview .info {
+    padding-left: 50px; }
+
+.card-title {
+  color: black; }
+
+#DOM div {
+  display: flex;
+  flex-wrap: wrap; }
+  #DOM div img {
+    object-fit: contain; }
