--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,69 @@
 body {
   padding: 0;
-  background-image: url(../img/background.jpg);
+  color: white;
+  background-color: black;
 }
 p {
-  color: white;
   font-size: 1rem;
 }
 h3 {
   color: white;
   font-size: 1.5rem;
+}
+header {
+  a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    h1 {
+      display: block;
+    }
+    div {
+      width: 250px;
+      height: 150px;
+      display: flex;
+      border-radius: 50%;
+      overflow: hidden;
+      justify-content: center;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+#preview {
+  background-image: url(../img/background.jpg);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  div {
+    width: 50%;
+    &:first-child {
+      display: flex;
+      justify-content: center;
+    }
+    img {
+      justify-self: center;
+      align-self: center;
+      padding: 0 auto;
+    }
+  }
+  .info {
+    padding-left: 50px;
+  }
+}
+
+.card-title {
+  color: black;
+}
+#DOM div {
+  display: flex;
+  flex-wrap: wrap;
+  img {
+    object-fit: contain;
+  }
 }
