--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,18 @@ header a {
 .card-title {
   color: black; }
 
-#DOM div {
+#DOM > div {
   display: flex;
-  flex-wrap: wrap; }
-  #DOM div img {
+  flex-wrap: wrap;
+  gap: 1rem; }
+  #DOM > div img {
     object-fit: contain; }
+  #DOM > div > div {
+    position: relative; }
+  #DOM > div .pretty {
+    position: absolute;
+    z-index: 4;
+    top: 5%;
+    right: 5%;
+    margin-right: 0;
+    transform: scale(2); }
