--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  padding: 0;
+  padding: 0 5rem;
   color: white;
   background-color: black; }
 
@@ -47,8 +47,15 @@ header a {
   #preview .info {
     padding-left: 50px; }
 
+div button.card {
+  background: black;
+  background: linear-gradient(0deg, #252525 11%, white 100%); }
+
+.card {
+  border: 0; }
+
 .card-title {
-  color: black; }
+  color: white; }
 
 #DOM > div {
   display: flex;
@@ -59,10 +66,18 @@ header a {
     object-fit: contain; }
   #DOM > div > div {
     position: relative; }
-  #DOM > div .pretty {
+  #DOM > div .pretty.star {
     position: absolute;
     z-index: 4;
     top: 5%;
     right: 5%;
     margin-right: 0;
     transform: scale(2); }
+
+#btn-DOM {
+  display: flex;
+  gap: 3rem;
+  justify-content: space-evenly; }
+  #btn-DOM button {
+    font-size: xx-large;
+    border-radius: 0.8rem; }
