--- a/scss/main.scss
+++ b/scss/main.scss
@@ -91,6 +91,12 @@ div button.card {
   }
 }
 
+#DOM {
+  #pagination {
+    justify-content: center;
+  }
+}
+
 #btn-DOM {
   display: flex;
   gap: 3rem;
