Work in Progress

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,6 +95,13 @@ div button.card {
   #pagination {
     justify-content: center;
   }
+  #sort-filter {
+    justify-content: space-between;
+    align-items: center;
+  }
+  #cards {
+    justify-content: center;
+  }
 }
 
 #btn-DOM {
