--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,13 @@ div button.card {
 #DOM #pagination {
   justify-content: center; }
 
+#DOM #sort-filter {
+  justify-content: space-between;
+  align-items: center; }
+
+#DOM #cards {
+  justify-content: center; }
+
 #btn-DOM {
   display: flex;
   gap: 3rem;
