--- a/scss/main.scss
+++ b/scss/main.scss
@@ -118,3 +118,20 @@ div button.card {
 .dont-show {
   display: none;
 }
+
+.calc-cocktails {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: space-evenly;
+  align-items: center;
+  > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60rem;
+    img {
+      border-radius: 10px;
+    }
+  }
+}
